[gd_scene load_steps=8 format=3 uid="uid://d2620pdyem257"]

[ext_resource type="Script" path="res://scripts/dialog_box.gd" id="1_mhbf8"]
[ext_resource type="FontFile" uid="uid://dmnwpqf86q7in" path="res://fonts/Pixellari.ttf" id="2_uklmy"]
[ext_resource type="Texture2D" uid="uid://m60psslmk30y" path="res://arts/ui_elements/dialog_box.png" id="3_xvro2"]
[ext_resource type="Texture2D" uid="uid://b4cj2lpd7rois" path="res://icon.svg" id="4_gemjr"]

[sub_resource type="LabelSettings" id="LabelSettings_tl5bv"]
font = ExtResource("2_uklmy")
font_size = 60
font_color = Color(0, 0, 0, 1)
outline_color = Color(0, 0, 0, 1)

[sub_resource type="LabelSettings" id="LabelSettings_8v7sy"]
font = ExtResource("2_uklmy")
font_size = 75
font_color = Color(0, 0, 0, 1)
outline_color = Color(0, 0, 0, 1)

[sub_resource type="LabelSettings" id="LabelSettings_a1knx"]
font = ExtResource("2_uklmy")
font_size = 40
font_color = Color(0, 0, 0, 1)
outline_color = Color(0, 0, 0, 1)

[node name="DialogBox" type="Node2D"]
z_index = 8
z_as_relative = false
y_sort_enabled = true
position = Vector2(8, 550)
scale = Vector2(2.5, 3.25)
script = ExtResource("1_mhbf8")

[node name="Control" type="Control" parent="."]
z_index = 7
z_as_relative = false
y_sort_enabled = true
layout_mode = 3
anchors_preset = 0
offset_left = -0.25387
offset_right = 39.7461
offset_bottom = 40.0
scale = Vector2(0.1, 0.1)
metadata/_edit_use_anchors_ = true

[node name="DialogBody" type="Label" parent="Control"]
z_index = 9
z_as_relative = false
y_sort_enabled = true
layout_mode = 1
anchors_preset = -1
anchor_left = 1.0
anchor_top = -2.464
anchor_right = 1.0
anchor_bottom = -2.464
offset_left = 435.0
offset_top = 111.56
offset_right = 1997.0
offset_bottom = 262.56
text = "Body"
label_settings = SubResource("LabelSettings_tl5bv")
visible_characters = 0
visible_ratio = 0.0
metadata/_edit_use_anchors_ = true

[node name="DialogHeader" type="Label" parent="Control"]
z_index = 9
z_as_relative = false
y_sort_enabled = true
layout_mode = 1
anchors_preset = -1
anchor_left = 0.863
anchor_top = -2.967
anchor_right = 0.863
anchor_bottom = -2.967
offset_left = 427.48
offset_top = 65.68
offset_right = 1430.48
offset_bottom = 128.68
text = "Header"
label_settings = SubResource("LabelSettings_8v7sy")
metadata/_edit_use_anchors_ = true

[node name="Enter" type="Label" parent="Control"]
z_index = 9
z_as_relative = false
y_sort_enabled = true
layout_mode = 1
anchors_preset = -1
anchor_left = 51.9994
anchor_top = 2.34051
anchor_right = 51.9994
anchor_bottom = 2.34051
offset_left = 20.15
offset_top = -0.0180054
offset_right = 205.15
offset_bottom = 70.982
text = "Enter >>"
label_settings = SubResource("LabelSettings_a1knx")
metadata/_edit_use_anchors_ = true

[node name="Sprite2D" type="Sprite2D" parent="."]
y_sort_enabled = true
position = Vector2(150.429, 4.85477)
scale = Vector2(0.516242, 0.204336)
texture = ExtResource("3_xvro2")
region_enabled = true
region_rect = Rect2(175, 10, 409, 144)

[node name="icon_face" type="Sprite2D" parent="."]
position = Vector2(23.4286, 4.88885)
scale = Vector2(0.260827, 0.204336)
texture = ExtResource("3_xvro2")
region_enabled = true
region_rect = Rect2(0, 0, 166, 164)

[node name="Timer" type="Timer" parent="."]
wait_time = 0.05

[node name="Face" type="Sprite2D" parent="."]
z_index = 6
y_sort_enabled = true
position = Vector2(23.4846, 5.36151)
scale = Vector2(0.184477, 0.146297)
texture = ExtResource("4_gemjr")

[connection signal="timeout" from="Timer" to="." method="_on_timer_timeout"]
